--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -181,6 +181,10 @@
   }
 }
 
+.article-wrap p {
+  font-size: 16px; /* 16 is the default increase if you want it larger */
+}
+
 .page__hero-image {
   width: 100%;
   height: auto;
