--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -12,6 +12,12 @@
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 {% endif %}
 
+{% if page.mathjax %}
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+{% endif %}
+
 {% if site.search == true or page.layout == "search" %}
   {%- assign search_provider = site.search_provider | default: "lunr" -%}
   {%- case search_provider -%}
